Project

General

Profile

Actions

Bug #13941

closed

intel code and headers should not look ia32 specific

Added by Rich Lowe over 1 year ago. Updated over 1 year ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
kernel
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

As an artifact of history, we have amd64 specific bits in sys/ia32/... headers, and sys/headers which include them. We should just put the headers straight into sys/ and leave symlinks, so as not to be confusing.
sys/ia32/ for headers that really are 32bit and shared with the 32bit userland (mostly register sets and layouts).

Actions #1

Updated by Rich Lowe over 1 year ago

  • Subject changed from intel headers should be in sys/ not sys/ia32 unless they actually are ia32 specific to intel code and headers should not look ia32 specific
Actions #2

Updated by Electric Monk over 1 year ago

  • Gerrit CR set to 1602
Actions #3

Updated by Patrick Mooney over 1 year ago

I have some mixed feelings about this: Given how uts/intel is already home to dozens of directories meant only to house makefiles and build artifacts, I thought it was somewhat useful for the ISA-specific code to be grouped under ia32. This was especially true when I was less familiar with the codebase.

This does (IMO) come down to a matter of preference, so if the prevailing sentiment is in favor of the renames, I won't object.

Actions #4

Updated by Electric Monk over 1 year ago

  • Status changed from In Progress to Closed
  • % Done changed from 0 to 100

git commit f0089e391b2bc4be2755f1a1b51fb4cd9b8f3988

commit  f0089e391b2bc4be2755f1a1b51fb4cd9b8f3988
Author: Richard Lowe <richlowe@richlowe.net>
Date:   2021-08-16T17:46:39.000Z

    13941 intel code and headers should not look ia32 specific
    Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
    Reviewed by: Toomas Soome <tsoome@me.com>
    Reviewed by: Patrick Mooney <pmooney@pfmooney.com>
    Approved by: Garret D'Amore <garrett@damore.org>

Actions

Also available in: Atom PDF