usr/src/uts/i86pc/ml/syscall_asm_amd64.s
@@ -271,7 +271,7 @@
  *
  * Check to make sure that we are returning to user land and that CR0.TS
  * is not set. This is required as part of the eager FPU (see
- * uts/intel/ia32/os/fpu.c for more information).
+ * uts/intel/os/fpu.c for more information).
  */
 
 #if defined(DEBUG)
@@ -1334,4 +1334,3 @@ _allsyscalls_size:
 	wrmsr
 	ret
 	SET_SIZE(sep_restore)
-
